# tauri_vue_bar

./: .gitignore  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
