[package]
name = "tauri_vue_bar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lib]
name = "tauri_vue_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-opener = "2.5.4"

bincode = "2.0.1"
chrono = "0.4.45"
log = "0.4.32"
tokio = { version = "1.52.3", features = ["full"] }
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
