[package]
name = "tauri_vue_bar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lib]
name = "tauri_vue_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-opener = "2.5.4"

log = "0.4.32"
xbar_core = { git = "https://github.com/beamiter/xbar_core.git", default-features = false, features = ["logging-flexi", "provider-alsa", "provider-battery-sysfs", "provider-brightnessctl", "provider-system", "transport-shared"] }
serde = { version = "1.0.228", features = ["derive"] }
